--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
   <head>
     <title></title>
   </head>
-  <body></body>
+  <body>
+    <header> 
+      <img src="src\logo.png"/>
+    </header>
+  </body>
 </html>
