--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title></title>
   </head>
   <body>
+    
     <header> 
-      <img src="src\logo.png"/>
+      <img src="src/logo.png"/>
+      <button>Механика игры CS</button>
     </header>
   </body>
 </html>
