--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
@@ -10,5 +11,6 @@
       <img src="src/logo.png"/>
       <button>Механика игры CS</button>
     </header>
+    <main></main>
   </body>
 </html>
