--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+   
     <header> 
       <img src="src/logo.png"/>
       <button>Механика игры CS</button>
     </header>
-    <main></main>
+    <main>
+      <p><b>Counter-strike появилась в привычном нам виде
+         не сразу, ведь с самого начала её прототипом
+          служило обычное дополние к игре half-life к 
+          той же игровой компании Valve. После этого
+           Counter-strike проделало огромный путь 
+           изменений путем обновлений и добавлением 
+           новых деталей.</b>
+      </p>
+    </main>
   </body>
 </html>
