--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button>Механика игры CS</button>
     </header>
     <main>
-      <p><b>Counter-strike появилась в привычном нам виде
+      <p class="text1"><b>Counter-strike появилась в привычном нам виде
          не сразу, ведь с самого начала её прототипом
           служило обычное дополние к игре half-life к 
           той же игровой компании Valve. После этого
@@ -20,6 +20,21 @@
            изменений путем обновлений и добавлением 
            новых деталей.</b>
       </p>
+      <div class="pagetwo">
+        <div class="obshii_text">
+      <p class="text2"><b>Механика и понимание игры.<br/><br/> Что бы хорошо играть в counter-strike, нужно уметь понимать игру и знать некоторые её азы.
+        <br/>1.Звуки.<br/>
+         В counter-strike очень важно прислушиваться к любому шороху и шагу.<br/>
+         2. Стрельба.<br/>
+        Для того чтобы попадать по врагам не нужно зажимать кнопку стрельбы, достаточно стрелять по врагу одиночными выстрелами.
+        <br/>3. Тихая ходьба.<br/>
+        Чтобы ходить медленно и тихо (не привлекая лишнего внимания)
+        Нужно зажать кнопку Shift на клавиатуре, или кнопку cntl чтобы ходить в присяде и проходить под препятствиями. 
+      </b></p>
+      <p class="center"><b>Удачной игры!</b></p>
+    </div>
+    <img src="src/page2.png" class="img2"/>
+    </div>
     </main>
   </body>
 </html>
