--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <body>
    
     <header> 
-      <img src="src/logo.png"/>
-      <button>Механика игры CS</button>
-    </header>
-    <main>
+      
+      <button ><img id="logo" src="src/logo.png"/></button>
+      <button class="button1">Механика игры CS</button>
+      <button class="button2">Позиции на Dust, mirage, inferno</button>
+      <button class="button3">Дешевые и красивые скины до 100 рублей</button>
+    </header> <main>
+    <div class="pageone">
+   
       <p class="text1"><b>Counter-strike появилась в привычном нам виде
          не сразу, ведь с самого начала её прототипом
           служило обычное дополние к игре half-life к 
@@ -20,6 +24,7 @@
            изменений путем обновлений и добавлением 
            новых деталей.</b>
       </p>
+    </div>
       <div class="pagetwo">
         <div class="obshii_text">
       <p class="text2"><b>Механика и понимание игры.<br/><br/> Что бы хорошо играть в counter-strike, нужно уметь понимать игру и знать некоторые её азы.
@@ -36,5 +41,6 @@
     <img src="src/page2.png" class="img2"/>
     </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
