--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
    
     <header> 
-       <button><img id="logo" src="src/logo.png"/></button>
+       <button class="button"><img id="logo" src="src/logo.png"/></button>
      
       <button class="button1">Механика игры CS</button>
       <button class="button2">Позиции на Dust, mirage, inferno</button>
@@ -43,15 +43,27 @@
 
     <div class="pagethree">
 
-    <p class="text3"><b><br/>Позиции на 3 основных <br/>картах<br/>
-      На поле боя нужно уметь<br/> правильно сообщать место<br/> положение противника.<br/>
-      <br/>Для этого игроками были<br/> придуманы названия некоторым позициям<br/> которые понимают<br/> много людей не только<br/> из СНГ.<br/>
-      <br/>Их названия странные но <br/>логичные:)
-    </b></p>
-    <div class="oneimg"></div>
+      <div class="textpage3">
+          <p class="text3"><b><br/>Позиции на 3 основных <br/>картах<br/>
+            На поле боя нужно уметь<br/> правильно сообщать место<br/> положение противника.<br/>
+            <br/>Для этого игроками были<br/> придуманы названия некоторым позициям<br/> которые понимают<br/> много людей не только<br/> из СНГ.<br/>
+            <br/>Их названия странные но <br/>логичные:)
+          </b></p>
+        </div>
+
+        <div class="mirag">
     <img src="src/page3.png" class="img3"/>
+       <p><b>1.Mirage</b></p>
+  </div>
+
+        <div class="dust2">
     <img src="src/page3.3.png" class="img4"/>
+    <p><b>2.Dust II</b></p>
+  </div>
+
+  <div class="inferno"></div>
     <img src="src/page3.2.png" class="img5"/>
+    <p><b>3.Inferno</b></p>
   </div>
   
   </div>
